<resources>
    <string name="app_name">App Animal</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="title_activity_main">Principal</string>

    <!-- Login e Registrar -->
    <string name="input_email">Email</string>
    <string name="input_senha">Senha</string>
    <string name="input_cnpj">CNPJ</string>
    <string name="input_endereco">Endereço</string>
    <string name="input_razao_social">Razão social</string>
    <string name="button_entrar">Entrar</string>
    <string name="erro_email_invalido">Email inválido</string>
    <string name="erro_senha_invalida">Senha muito curta</string>
    <string name="erro_senha_errada">Senha incorreta</string>
    <string name="erro_campo_obrigatorio">Campo obrigatório</string>
    <string name="label_registrar">Registre-se</string>
    <string name="spinner_tipo_instituicao">Tipo de instituição</string>
    <string name="input_telefone">Telefone</string>

    <!-- Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_principal">Principal</string>
    <string name="nav_menu_configuracoes">Configurações</string>
    <string name="nav_menu_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
