<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufsc.tic.appanimal.RegistrarActivity">

    <LinearLayout
        android:id="@+id/registrar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/tipoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_tipo_instituicao" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cnpj"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_cnpj" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/razao_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_razao_social" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/tipoInstituicao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_tipo_instituicao" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_endereco"  />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_telefone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
